<resources>
    <string name="app_name">FileReview</string>
    <string name="title">File Manager</string>
    <string name="activity_main">Main Activity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">微信</string>
    <string name="title_addressbook">通讯录</string>
    <string name="title_find">发现</string>
    <string name="title_me">我</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="ID">User ID</string>
    <string name="PassWord">PassWord</string>
    <string name="Repeat_Password">Repeat Again PassWord</string>
    <string name="User_Name">Name</string>
    <string name="User_Birthday">Birthday</string>
    <string name="RegisterGO">Register Go</string>
    <string name="BackToHome">Back To Home</string>
    <string name="Change">Change Info</string>
    <string name="Welcomehome">Welcome Home!</string>
    <string name="Unknowuser">Unknown User</string>
    <string name="Service">Services</string>
    <string name="WebBrowser">WebBrowser</string>
    <string name="ChatRoom">ChatRoom</string>
    <string name="PhotoManager">PhotoManager</string>
    <string name="Logout">Logout</string>
    <string name="InputUserIDHint">Input UserID</string>
    <string name="BacktoLogin">Back to Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat_home">ChatHomeActivity</string>


</resources>
