<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.filereview.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_addressbook"
        android:name="com.example.filereview.ui.dashboard.DashboardFragment"
        android:label="@string/title_addressbook"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_find"
        android:name="com.example.filereview.ui.notifications.NotificationsFragment"
        android:label="@string/title_find"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_myself"
        android:name="com.example.filereview.ui.myself.MyselfFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_myself"/>
</navigation>