<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:layout_marginTop="36dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/text_home"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/welcomehome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcomehome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/line"
        android:textSize="16dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/unknowuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        android:text="@string/Unknowuser"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/knownuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintLeft_toLeftOf="@id/guideline2" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:textSize="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/LOGIN"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243"
        style="@style/ButtonSetting"/>

    <Button
        android:id="@+id/registerathome"
        android:layout_marginTop="64dp"
        android:text="@string/Register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/LOGIN"
        app:layout_constraintRight_toRightOf="@id/LOGIN"
        app:layout_constraintTop_toBottomOf="@id/LOGIN"
        style="@style/ButtonSetting"/>

    <Button
        android:id="@+id/filemanager_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleservices"
        android:layout_marginTop="30dp" />
    <Button
        android:id="@+id/WebBrowser_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/WebBrowser"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/titleservices" />
    <Button
        android:id="@+id/ChatRoom"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/ChatRoom"
        android:layout_marginTop="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/titleservices" />
    <Button
        android:id="@+id/photomanager"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/PhotoManager"
        android:layout_marginRight="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleservices"
        android:layout_marginTop="120dp" />

    <TextView
        android:id="@+id/titleservices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:text="@string/Service"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="138dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="72dp" />


</androidx.constraintlayout.widget.ConstraintLayout>